Changes in index

--- a/index.html
+++ b/index.html
@@ -208,6 +208,33 @@
         justify-content: center;
     }
 
+    .button-cover {
+        width: 100%;
+    }
+
+    .butn {
+        margin-top: 1.875rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #ff004f;
+        height: 5rem;
+        width: 15.5rem;
+        border-radius: 50px;
+        color: white;
+        border: none;
+        font-size: 1.5rem;
+        cursor: pointer;
+        isolation: isolate;
+    }
+
+    .butn a {
+        font-family: "Nunito", sans-serif;
+        text-align: center;
+        text-decoration: none;
+        color: white;
+    }
+
     /* -----------------------------------------SECOND CONTAINER (NAME, DESCRIPTION ETC)----------------------------------------- */
 
 
@@ -221,7 +248,13 @@
             margin-top: 5%;
             width: 100%;
         }
+
+        .button-cover {
+            display: flex;
+            justify-content: center;
+        }
     }
+
     /* -----------------------------------------MEDIA TAG FOR 1100px SCREEN SIZE----------------------------------------- */
 
 
@@ -265,6 +298,7 @@
             cursor: pointer;
         }
     }
+
     /* -----------------------------------------MEDIA TAG FOR 1100px SCREEN SIZE----------------------------------------- */
 
 
@@ -280,6 +314,7 @@
             font-size: 1.3rem;
         }
     }
+
     /* -----------------------------------------MEDIA TAG FOR 1100px SCREEN SIZE----------------------------------------- */
 
 
@@ -317,6 +352,7 @@
             width: 100%;
         }
     }
+
     /* -----------------------------------------MEDIA TAG FOR 375px SCREEN SIZE----------------------------------------- */
 </style>
 
@@ -354,6 +390,12 @@
                     <h1>Hello there!<br> I'm <span>Mustafa Dohad.</span></h1>
                     <p class="summary">Coding quirks, coffee addiction, hustling habits, and occasional naps - that's me
                         in a nutshell.</p>
+                    <div class="button-cover">
+
+                        <div class="butn">
+                            <a href="project.html" class="btn">check out my stuff!</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="memoji">
                     <img src="images/f293e3cb4502f4d9-sticker.png" alt="">
