Made some changes

--- a/about.html
+++ b/about.html
@@ -111,7 +111,7 @@
 
 
     .about-col-2 {
-        flex-basis: 60%;
+        flex-basis: 100%;
 
     }
 
@@ -194,7 +194,6 @@
     .span09 {
         color: rgb(243, 109, 0);
     }
-
     /* -----------------------------------------MY INFO----------------------------------------- */
 
 
@@ -206,7 +205,6 @@
     .tab-contents.active-tab {
         display: block;
     }
-
     /* -----------------------------------------ALL THE CONTENTS THAT WILL APPEAR AND DISAPPEAR----------------------------------------- */
 
 
@@ -219,7 +217,7 @@
 
     .skills-container {
         height: 10rem;
-        width: 40rem;
+        width: 100%;
         margin: 1rem;
         border-radius: 15px;
         padding-top: 1rem;
@@ -256,7 +254,6 @@
         color: #ffffff;
         font-family: "Comfortaa", serif;
     }
-
     /* -----------------------------------------SKILLS SECTION----------------------------------------- */
 
 
@@ -297,14 +294,15 @@
     .alert-msg p a:hover {
         color: rgb(255, 255, 255);
     }
-
     /* -----------------------------------------SKILLS SECTION----------------------------------------- */
 
 
     /* -----------------------------------------MY IMAGE----------------------------------------- */
     .about-col-1 {
+        margin-top: 3rem;
         flex-basis: 35%;
         display: flex;
+        height: 50%;
         justify-content: center;
         align-items: center;
         margin-bottom: 3rem;
@@ -312,10 +310,9 @@
     }
 
     .about-col-1 img {
-        width: 100%;
+        width: 30%;
         border-radius: 2rem;
     }
-
     /* -----------------------------------------MY IMAGE----------------------------------------- */
 
 
@@ -400,6 +397,9 @@
             width: 14rem;
             height: 14rem;
         }
+        .skills-container{
+            height: 15rem;
+        }
     }
     /* -----------------------------------------MEDIA TAG FOR 850px SCREEN SIZE----------------------------------------- */
 
@@ -430,7 +430,6 @@
             width: 10rem;
             height: 10rem;
         }
-
     }
     /* -----------------------------------------MEDIA TAG FOR 700px SCREEN SIZE----------------------------------------- */
 
@@ -457,7 +456,7 @@
         }
 
         .skills-container {
-            height: 20rem;
+            height: 22rem;
         }
 
         .alert-msg img {
@@ -528,6 +527,9 @@
                             for internships 2024)</span>
                     </p>
 
+                    <div class="about-col-1">
+                        <img src="images/my-photo.jpg" alt="">
+                    </div>
                 </div>
 
                 <div class="tab-contents" id="skill">
@@ -540,6 +542,7 @@
                                 <li>JAVA-SCRIPT</li>
                                 <li>HTML/CSS</li>
                                 <li>BASH</li>
+                                <li>SQL</li>
                                 <li>PYTHON</li>
                             </ul>
 
@@ -557,7 +560,6 @@
                         <div class="skills-container">
                             <h1>Additional:</h1>
                             <ul>
-                                <li>SQL</li>
                                 <li>BOOTSTRAP</li>
                                 <li>MICROSOFT OFFICE</li>
                                 <li>NOTION</li>
@@ -581,9 +583,6 @@
                     </div>
                 </div>
 
-            </div>
-            <div class="about-col-1">
-                <img src="images/my-photo.jpg" alt="">
             </div>
         </div>
     </div>
