--- a/index.html
+++ b/index.html
@@ -233,6 +233,12 @@
         text-align: center;
         text-decoration: none;
         color: white;
+        font-size: large;
+        font-weight: 600
+    }
+    .butn:hover{
+        background-color: rgb(105, 95, 95);
+        transition: 0.3s ease-in-out;
     }
 
     /* -----------------------------------------SECOND CONTAINER (NAME, DESCRIPTION ETC)----------------------------------------- */
@@ -254,7 +260,6 @@
             justify-content: center;
         }
     }
-
     /* -----------------------------------------MEDIA TAG FOR 1100px SCREEN SIZE----------------------------------------- */
 
 
@@ -304,8 +309,6 @@
 
     /* -----------------------------------------MEDIA TAG FOR 750px SCREEN SIZE----------------------------------------- */
     @media only screen and (max-width: 750px) {
-        .header-text {}
-
         .header-text h1 {
             font-size: 2.7rem;
         }
@@ -338,7 +341,6 @@
             font-size: 0.9rem;
         }
     }
-
     /* -----------------------------------------MEDIA TAG FOR 540px SCREEN SIZE----------------------------------------- */
 
 
@@ -352,7 +354,6 @@
             width: 100%;
         }
     }
-
     /* -----------------------------------------MEDIA TAG FOR 375px SCREEN SIZE----------------------------------------- */
 </style>
 
@@ -393,7 +394,7 @@
                     <div class="button-cover">
 
                         <div class="butn">
-                            <a href="project.html" class="btn">check out my stuff!</a>
+                            <a href="project.html" class="btn">check out my stuff</a>
                         </div>
                     </div>
                 </div>
