Major changes in project section and fixed the issue of relaoding current website again and again

--- a/contact.html
+++ b/contact.html
@@ -275,7 +275,7 @@ input, textarea::placeholder{
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="project.html">Projects</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="#">Contact</a></li>
                     <i class="fas fa-times" onclick="closeMenu()"></i>
                 </ul>
                 <i class="fas fa-bars" onclick="openMenu()"></i>
