--- a/index.html
+++ b/index.html
@@ -362,9 +362,9 @@
         <div class="container">
 
             <nav>
-                <p class="name"><a href="index.html">Mustafa-Dohad</a></p>
+                <p class="name"><a href="#">Mustafa-Dohad</a></p>
                 <ul id="sidemenu">
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="project.html">Projects</a></li>
                     <li><a href="contact.html">Contact</a></li>
