--- a/about.html
+++ b/about.html
@@ -479,7 +479,7 @@
                 <p class="name"><a href="index.html">Mustafa-Dohad</a></p>
                 <ul id="sidemenu">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="#">About</a></li>
                     <li><a href="project.html">Projects</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <i class="fas fa-times" onclick="closeMenu()"></i>
