[core] resume added

--- a/contact.html
+++ b/contact.html
@@ -296,7 +296,7 @@ input, textarea::placeholder{
                     </div>
                     <div class="cv">
                         <div class="butn">
-                            <a href="" download class="btn">Download Resume</a>
+                            <a href="resume/Mustafa Resume.docx" download class="btn">Download Resume</a>
                         </div>
                     </div>
                 </div>
